# trading-zzy

./: .dockerignore  .env.example  .gitattributes  .gitignore  Docker-readme.md  Dockerfile  README.md  build.bat  build.sh  deploy_trading_zzy.sh  docker-compose.yml  index.html  index_complete.html  init-ollama.bat  init-ollama.sh  main.py  pyproject.toml  requirements.txt  run_deepseek_strategy.py  setup.py  test.py
cli/: main.py  models.py  utils.py
cli/static/: welcome.txt
tests/: README.md  __init__.py  run_tests.py  test_ollama_connection.py  test_openai_connection.py  test_setup.py
tradingagents/: default_config.py
tradingagents/agents/: __init__.py
tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
tradingagents/agents/managers/: research_manager.py  risk_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/risk_mgmt/: aggresive_debator.py  conservative_debator.py  neutral_debator.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py  core_stock_tools.py  fundamental_data_tools.py  memory.py  news_data_tools.py  technical_indicators_tools.py
tradingagents/dataflows/: __init__.py  alpha_vantage_common.py  alpha_vantage_indicator.py  config.py  finnhub_utils.py  interface.py  stockstats_utils.py  y_finance.py  yahoo_finance.py
tradingagents/graph/: conditional_logic.py  propagation.py  reflection.py  setup.py  trading_graph.py
